Revision history for Overload-FileCheck

{{$NEXT}}

0.005     2018-10-25 12:58:55-05:00 America/Chicago

improve POD and Markdown documentation

0.004     2018-10-24 14:18:10-05:00 America/Chicago

- fix XS compilation issue on some systems

0.003     2018-10-24 12:55:07-05:00 America/Chicago

- fix t/mock-setting-errno.t on server not using english as locale
- adjust several checks to use stat instead of lstat

0.002     2018-10-23 17:12:06-05:00 America/Chicago

- mock_stat can handle empty array ref return
- fix unclosed C comment in FileCheck.xs
- avoid issues with test files and case insensitive file systems
- use stat instead of lstat when possible
- hide the second call to lstat (GH #4)
- add helpers for stat: stat_as_file, stat_as_directory...

0.001     2018-10-19 16:58:00-05:00 America/Chicago

First version, this is a very alpha state
    use it at your own risk
